# ndownload

./: .gitignore  Cargo.toml  flake.nix  test_cache_clear.json
src/: cache.rs  config.rs  database.rs  downloader.rs  downloader_queue.rs  main.rs  notifications.rs  scanner.rs
src/ui/: actions.rs  mod.rs  progress.rs  text_input.rs
src/ui/components/: channel_item.rs  mod.rs  progress_bar.rs  video_item.rs
