[package]
name = "ndownloader"
version = "0.1.0"
edition = "2021"
authors = ["Nia"]
description = "Automatic video downloader for Twitch and YouTube channels with GPUI interface"
include = ["data/**/*", "src/**/*", "Cargo.toml", "assets/**/*"]

[dependencies]
# UI Framework
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.216.1", features = ["wayland"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process"], default-features = false }
futures = "0.3"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = "0.4"

# Utilities
parking_lot = "0.12"
smol = "2.0.2"

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[workspace]
